--- a/.drone.yml
+++ b/.drone.yml
@@ -48,7 +48,13 @@ steps:
       from_secret: discord_webhook_id
     webhook_token:
       from_secret: discord_webhook_token
-      
+  when:
+    event:
+    - push
+    branch:
+    - master
+    - main
+    
 ---
 kind: pipeline
 type: docker
