--- a/.drone.yml
+++ b/.drone.yml
@@ -68,13 +68,13 @@ steps:
   - name: cache
     path: /drone/src/dist/itm-frontend
   commands:
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/auth.service.ts
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/client.service.ts
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/project.service.ts
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/ticket.service.ts
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/user.service.ts
-  - sed -e "s|https://api-itm.herokuapp.com|$BACKEND_URL|" /drone/src/src/app/services/users.service.ts
-  - sed -i "s|<base href=\"/\">|<base href=\"/public/$CI_BUILD_TARGET\">|" src/index.html
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/auth.service.ts
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/client.service.ts
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/project.service.ts
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/ticket.service.ts
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/user.service.ts
+  - sed -e "s|https://api-itm.herokuapp.com|${BACKEND_URL}|" /drone/src/src/app/services/users.service.ts
+  - sed -i "s|<base href=\"/\">|<base href=\"/public/${CI_BUILD_TARGET}\">|" src/index.html
   - npm install
   - npm run build
 
@@ -102,9 +102,9 @@ steps:
       from_secret: discord_webhook_token
     message: >
       {{#success build.status}}
-        Promote {{repo.name}} succeeded. Good job.
+        Promote {{repo.name}} to ${CI_BUILD_TARGET} succeeded. Good job.
       {{else}}
-        Promote {{repo.name}} failed. Fix me please.
+        Promote {{repo.name}} to ${CI_BUILD_TARGET} failed. Fix me please.
       {{/success}}
 
 trigger:
